# dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
south_africa/: gross_domestic_product.py  inflation.py  shared.py  stats_sa.py
south_africa/adapters/: gdp.py
south_africa/connectors/: cpi.py  gdp.py
south_africa/data/: cpi-average-prices-all-urban-202604.xlsx  cpi-average-prices-provinces-202604.xlsx  excel-cpi-coicop-from-january-2008-202604.xlsx  gdp-p0441-q1-2026.xlsx  residential-property-price-indices-2010-to-2026.xlsx
south_africa/ingestions/: cpi.py
south_africa/tools/: http_client.py  utils.py
south_africa/transformations/: cpi.py
